Jupyter script for GJT automation

--- a/analysis/gjt-web-analysis/gjt_analysis.ipynb
+++ b/analysis/gjt-web-analysis/gjt_analysis.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "%set working directory\n",
-    "cd /Volumes/data-1/projects/blast/matlab_scripts/gjt_sharon_working/\n",
+    "cd /Volumes/data-1/projects/blast/matlab_scripts/gjt_analysis/\n",
     "%Find the location of the SPOLI files\n",
     "spoli_folder = '/Volumes/data-1/projects/spoli/raw_sl_data';\n",
     "%Find the location of the BLAST files\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 4. Create empty lists for raw score, standard score, and participant IDs, hits, false alarms ,a_prime"
+    "Step 4. Create empty lists for raw score, standard score, and participant IDs, hits, false alarms "
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 6. Combine raw scores (a_prime), and create a table with the particpant id, hit rate, false alarm rate, and standard score"
+    "Step 6. Combine raw scores (a_prime), and create a table with the particpant id, hit rate, and false alarm rate"
    ]
   },
   {
