--- a/writing/heb/rdoc/heb_zq.Rmd
+++ b/writing/heb/rdoc/heb_zq.Rmd
@@ -24,13 +24,13 @@ library(ggbeeswarm)
 library(Hmisc)
 library(arm)
 library(ez)
-source("~/Dropbox (MIT)/how-to/stats/R-related/centerfactor.R")
+source("/Users/julieschneider/Julie_Personal/Projects/HEB/R_scripts/centerfactor.R")
 ```
 
 ```{r,include=FALSE,echo=FALSE,warning=FALSE}
 #Load data
-hebtrial <- read.csv("~/Dropbox (MIT)/UDel/projects/collaboration/InbalArnon/hebresultsupdate/heb_trial_clean_082819.csv")
-hebindiv <- read.csv("~/Dropbox (MIT)/UDel/projects/collaboration/InbalArnon/HEB_Data.csv", comment.char="#")
+hebtrial <- read.csv('/Users/julieschneider/Julie_Personal/Projects/HEB/R_scripts/heb_trial_clean_031719.csv')
+hebindiv <- read.csv('/Users/julieschneider/Julie_Personal/Projects/HEB/R_scripts/HEB_Data.csv')
 hebtrial$task = as.factor(as.character(hebtrial$task)) # 0 means nonlinguistic and 1 means linguistic task
 hebtrial$task_order = as.factor(as.character(hebtrial$task_order)) # 0 means nonlinguistic task comes first and 1 means linguistic task comes first
 hebtrial$trial_order = as.factor(as.character(hebtrial$trial_order)) # 0 means foil comes first and 1 means target comes first
@@ -63,13 +63,13 @@ summary(eng_indiv)
 ```
 
 ```{r,warning=FALSE}
-taskanova <- ezANOVA(eng_indiv, accuracy, subject, within = .(task), type = 2, detailed = TRUE)
+taskanova <- ezANOVA(eng_indiv, accuracy, subject, within = .(Task), type = 2, detailed = TRUE)
 taskanova
 ```
 
 ### Testing the effect of familiarity on the overall accuracy (1) and the trial-by-trial accuracy (2) of the linguistic task in the English group
 ```{r}
-m1 = lm(accuracy~familiarity,data=eng_indiv[eng_indiv$task=="Linguistic",])
+m1 = lm(accuracy~familiarity,data=eng_indiv[eng_indiv$Task=="Linguistic",])
 summary(m1)
 ```
 ```{r}
@@ -94,7 +94,7 @@ cor.test(hebindiv_ling_eng$accuracy,hebindiv_ling_eng$Q5, method = "spearman")
 
 ### Testing the relationship between vocabulary and performance across tasks in the English group.
 ```{r}
-glmvoc = glm(accuracy~vocabulary*task,data=eng_indiv)
+glmvoc = glm(accuracy~vocabulary*Task,data=eng_indiv)
 summary(glmvoc)
 ```
 
