--- a/writing/heb/rdoc/HEB_onlinerating.Rmd
+++ b/writing/heb/rdoc/HEB_onlinerating.Rmd
@@ -30,8 +30,8 @@ source("centerfactor.R")
 
 ```{r}
 setwd("/Volumes/data/projects/writing/heb/data_paper/data/")
-df_eng=read.csv('english.csv')
-df_heb=read.csv('hebrew.csv')
+df_eng=read.csv('../data/english.csv')
+df_heb=read.csv('../data/hebrew.csv')
 ```
 
 ### Rename columns to words
@@ -131,7 +131,7 @@ heb_foil_mean
 ## Does the English speakers’ rating of the HEB targets help explaining the learnability of these triplets? 
 ### Import original HEB Dataset
 ```{r}
-hebtrial <- read.csv('/Volumes/GoogleDrive/My Drive/Projects/HEB/R_scripts/heb_trial_clean_082819.csv')
+hebtrial <- read.csv('../data/heb_trial_clean_082819.csv')
 hebtrial$task = as.factor(as.character(hebtrial$task)) # 0 means nonlinguistic and 1 means linguistic task
 hebtrial$task_order = as.factor(as.character(hebtrial$task_order)) # 0 means nonlinguistic task comes first and 1 means linguistic task comes first
 hebtrial$trial_order = as.factor(as.character(hebtrial$trial_order)) # 0 means foil comes first and 1 means target comes first
@@ -141,25 +141,31 @@ heb_only_trial<- hebtrial[which(hebtrial$language == "hebrew"),]
 eng_trial<- hebtrial[which(hebtrial$language == "english"),]
 eng_ling_trial<- eng_trial[which(eng_trial$task == 1),]
 eng_trial=droplevels(eng_trial)
-contrasts(eng_trial$trial)=centerfactor(eng_trial$trial)
 summary(eng_trial)
-df<- eng_ling_trial[which(eng_ling_trial$trial_order == "word"),]
 ```
 
 ### Add web based familiarity ratings with larger original HEB dataset
 ```{r}
-df$web_ratings <- ifelse(df$trial_number == 1 | df$trial_number == 2 | df$trial_number == 3 | df$trial_number == 4 | df$trial_number == 5, "2.18", #DUKAME
-                          ifelse(df$trial_number == 6 | df$trial_number == 7 | df$trial_number == 8 | df$trial_number == 9 | df$trial_number == 10, "2.40", #GEDINO
-                                 ifelse(df$trial_number == 11 | df$trial_number == 12 | df$trial_number == 13 | df$trial_number == 14 | df$trial_number == 15, "1.90", #KIMUGA
-                                        ifelse(df$trial_number == 16 | df$trial_number == 17 | df$trial_number == 18 | df$trial_number == 19 | df$trial_number == 20, "2.50", #NALOBI
-                                               ifelse(df$trial_number == 21 | df$trial_number == 22 | df$trial_number == 23 | df$trial_number == 24 | df$trial_number == 25, "2.20","0"))))) #TOBELU
+eng_ling_trial$web_ratings <- ifelse(eng_ling_trial$trial_number == 1 | eng_ling_trial$trial_number == 2 | eng_ling_trial$trial_number == 3 | eng_ling_trial$trial_number == 4 | eng_ling_trial$trial_number == 5, "2.18", #DUKAME
+                          ifelse(eng_ling_trial$trial_number == 6 | eng_ling_trial$trial_number == 7 | eng_ling_trial$trial_number == 8 | eng_ling_trial$trial_number == 9 | eng_ling_trial$trial_number == 10, "2.40", #GEDINO
+                                 ifelse(eng_ling_trial$trial_number == 11 | eng_ling_trial$trial_number == 12 | eng_ling_trial$trial_number == 13 | eng_ling_trial$trial_number == 14 | eng_ling_trial$trial_number == 15, "1.90", #KIMUGA
+                                        ifelse(eng_ling_trial$trial_number == 16 | eng_ling_trial$trial_number == 17 | eng_ling_trial$trial_number == 18 | eng_ling_trial$trial_number == 19 | eng_ling_trial$trial_number == 20, "2.50", #NALOBI
+                                               ifelse(eng_ling_trial$trial_number == 21 | eng_ling_trial$trial_number == 22 | eng_ling_trial$trial_number == 23 | eng_ling_trial$trial_number == 24 | eng_ling_trial$trial_number == 25, "2.20","0"))))) #TOBELU
+```
+
+
+```{r}
+eng_ling_trial$triplet <- ifelse(eng_ling_trial$trial_number == 1 | eng_ling_trial$trial_number == 2 | eng_ling_trial$trial_number == 3 | eng_ling_trial$trial_number == 4 | eng_ling_trial$trial_number == 5, "2", #DUKAME
+                          ifelse(eng_ling_trial$trial_number == 6 | eng_ling_trial$trial_number == 7 | eng_ling_trial$trial_number == 8 | eng_ling_trial$trial_number == 9 | eng_ling_trial$trial_number == 10, "1", #GEDINO
+                                 ifelse(eng_ling_trial$trial_number == 11 | eng_ling_trial$trial_number == 12 | eng_ling_trial$trial_number == 13 | eng_ling_trial$trial_number == 14 | eng_ling_trial$trial_number == 15, "3", #KIMUGA
+                                        ifelse(eng_ling_trial$trial_number == 16 | eng_ling_trial$trial_number == 17 | eng_ling_trial$trial_number == 18 | eng_ling_trial$trial_number == 19 | eng_ling_trial$trial_number == 20, "4", #NALOBI
+                                               ifelse(eng_ling_trial$trial_number == 21 | eng_ling_trial$trial_number == 22 | eng_ling_trial$trial_number == 23 | eng_ling_trial$trial_number == 24 | eng_ling_trial$trial_number == 25, "5","0"))))) #TOBELU
 ```
 
 ### A generalized linear mixed-effects analysis with trial-by-trial perceived familiarity (using ratings from the web-based sample) as the fixed effect, as well as random slopes for subject and question number.
 ```{r}
-df$web_ratings=as.numeric(as.character(df$web_ratings))
-
-fm2 <-  glmer(trial_accuracy~web_ratings+(1|subject)+(1|trial_number),family = binomial,data=df)
+eng_ling_trial$web_ratings=as.numeric(as.character(eng_ling_trial$web_ratings))
+fm2 <-  glmer(trial_accuracy~web_ratings+(1+web_ratings|subject)+(1+web_ratings|triplet),family = binomial,data=eng_ling_trial)
 summary(fm2)
 ```
 ## Does accuracy significantly differ across ratings? No.
@@ -172,12 +178,12 @@ summary(m1)
 ```
 
 
-## Are the target words rated differently?
+## Are the target words rated differently in English-speaking population?
 ```{r}
 library(dunn.test)
-df_merge<-rbind(df_eng,df_heb)
-webrank=df_merge[c(1,12, 14, 17, 19,20)]
-webrank$part_ID<-1:100
+#df_merge<-rbind(df_eng,df_heb)
+webrank=df_eng[c(1,12, 14, 17, 19,20)]
+webrank$part_ID<-1:50
 
 webrank=melt(webrank,id=1)
 colnames(webrank)[2]="item"
@@ -186,3 +192,5 @@ kruskal.test(ranking ~ item,
              data = webrank)
 DT = dunn.test(webrank$ranking,webrank$item, method="bh")      # Adjusts p-values for multiple comparisons;
 ```
+
+## Are the target words rated differently before and after training? The two groups have different ranking baseline and ranking procedure (therefore not comparable)
